fix cards display on small screen and animation 'jump'

--- a/ninetynine.css
+++ b/ninetynine.css
@@ -59,6 +59,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    min-height: 340px;
 }
 
 #middleRow > div {
